# finagent

./: README.md  call_functions.py  main.py  prompts.py  pyproject.toml  server.py  test_install_packages.py  test_run_python_file.py  test_update_project_state.py  test_write_file.py
agent/: core.py
agents_first_project/: AAPL_last_year.csv  GOOGL_last_year.csv  PROJECT_STATE.md  directional_change.py  directional_change_detection.py  fetch_and_save_data.py  fetch_data.py  hmm_model.py  install_dependencies.py  mean_reversion_strategy.py  plot_ohlc_supertrend.py  requirements.txt  run_script_with_env.py  stock_analyzer.py  test.txt
agents_first_project/data/: nifty50_prices.parquet
calculator/: lorem.txt
frontend/: index.html
functions/: get_file_content.py  get_files_info.py  get_project_state.py  install_packages.py  run_python.py  run_python_file.py  update_project_state.py  write_file.py
models/: gemini.py
